--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,9 +16,13 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@fastify/cookie": "^9.3.1",
     "@fastify/cors": "^9.0.1",
+    "@fastify/csrf-protection": "^6.4.1",
     "@prisma/client": "^5.13.0",
     "fastify": "^4.26.2",
+    "fastify-cookie": "^5.7.0",
+    "fastify-csrf": "^3.1.0",
     "tsx": "^4.8.2"
   }
 }
